...
    <string name="edit_alert_resolve_button_text">Resolve</string>

    <string name="edit_alert_toast_successful_update">Alert updated</string>
    <string name="edit_alert_toast_not_implemented_yet">This feature is not implemented yet</string>

    <!-- Alert Lists Screen -->
    <string name="alert_lists_screen_title">Alert Lists</string>
    <string name="alert_lists_tab_my_alerts_title">My Alerts</string>
    <string name="alert_lists_tab_pals_alerts_title">Pals Alerts</string>

    <string name="alert_lists_no_my_alerts_dialog">You haven\'t asked for help yet !</string>
    <string name="alert_lists_no_pals_alerts_dialog">No pal needs help yet !</string>

    <string name="alert_lists_my_alert_edit_text">Edit</string>
    <string name="alert_lists_pal_alert_accept_text">Accept</string>
    <string name="alert_lists_pal_alert_unaccept_text">Un-accept</string>

    <string name="alert_lists_filter_default">No Preference</string>
...
